--- a/Client/Pages/Watcher.razor
+++ b/Client/Pages/Watcher.razor
@@ -13,6 +13,8 @@ else
 {
     <h1>@watcher.FirstName @watcher.LastName</h1>
 
+    <h3>@PublicIdentifier</h3>
+
     <h5 class="mt-4">Kurátoři</h5>
     @if (watcher.Curators is not null && watcher.Curators.Any())
     {
