--- a/Client/Pages/Record.razor
+++ b/Client/Pages/Record.razor
@@ -19,7 +19,7 @@ else
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">
-                👀 Pozorování ptáčka: <strong>@record.Bird?.BinomicName</strong>
+                👀 Ptáček: <strong>@record.Bird?.BinomicName</strong>
             </h5>
             <h6 class="card-subtitle mb-2 text-muted">
                 👤 @record.Watcher?.FirstName @record.Watcher?.LastName — @record.DateSeen.ToString("dd.MM.yyyy HH:mm")
